--- a/ECE5725_Website/assets/css/main.css
+++ b/ECE5725_Website/assets/css/main.css
@@ -1719,7 +1719,7 @@
 
 		.image.fit {
 			display: block;
-			width: 100%;
+			width: 60%;
 		}
 
 		.image.featured {
@@ -1940,7 +1940,7 @@
 	}
 
 		.item header {
-			background: #fff;
+			background: #EBEFF0;
 			margin: 0;
 			padding: 1em 0 1em 0;
 			font-size: 0.8em;
@@ -2148,7 +2148,7 @@
 			overflow: hidden;
 			padding: 4em 0;
 			box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
-			text-align: center;
+			text-align: left;
 			background-image: url("images/overlay.png");
 		}
 
